src/objects/Customer__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Turnover__c</fullName>
        <label>Annual Turnover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Address_To_Shipping_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Billing Address To Shipping Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_CRM_System__c</fullName>
        <label>Current CRM System</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Codes__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Customer Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Making__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Making</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extentor_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Extentor Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Industry_Vertical__c</fullName>
        <label>Industry Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not For Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Person_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inside Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customers_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Prospect Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Employees__c</fullName>
        <label>No. of Employees</label>
        <picklist>
            <picklistValues>
                <fullName>1-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-500</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Potentials_Users__c</fullName>
        <label>No. of Potentials Users</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pain__c</fullName>
        <label>Pain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipName>Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Portal_Number__c</fullName>
        <label>Partner Portal Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Points_For_Decision_Making__c</fullName>
        <formula>IF( Decision_Making__c =true,5,0)</formula>
        <label>Points For Decision Making</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_For_Need__c</fullName>
        <formula>IF( Need__c =true,5,0)</formula>
        <label>Points For Need</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_For_TimeFrame__c</fullName>
        <formula>CASE( TEXT( TimeFrame__c ) , &apos;1 Month&apos;, 5, &apos;2 Month&apos;, 4,&apos;3 Month&apos;,3,&apos;4 Month&apos;,2,&apos;&gt;4 Month&apos;,1,0)</formula>
        <label>Points For TimeFrame</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Product_Interest__c</fullName>
        <label>Primary Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Professional Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com- One app and Force</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_AE__c</fullName>
        <label>Salesforce AE</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State_Province__c</fullName>
        <label>Shipping State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Postal_Code__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Data List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead Opps - Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reema&apos;s List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle DB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub Industry</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeFrame__c</fullName>
        <label>TimeFrame</label>
        <picklist>
            <picklistValues>
                <fullName>1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;4 Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Company</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Companies</fullName>
        <columns>NAME</columns>
        <columns>Phone__c</columns>
        <columns>Billing_City__c</columns>
        <columns>Industry_Vertical__c</columns>
        <columns>Website__c</columns>
        <columns>Inside_Sales_Person_del__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer__c.Company</value>
        </filters>
        <label>All Companies</label>
    </listViews>
    <listViews>
        <fullName>All_Suppliers</fullName>
        <columns>NAME</columns>
        <columns>Billing_City__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer__c.Suppliers</value>
        </filters>
        <label>All Suppliers</label>
    </listViews>
    <listViews>
        <fullName>Mumbai_Media_List</fullName>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>NAME</columns>
        <columns>Mobile__c</columns>
        <columns>Phone__c</columns>
        <columns>Rating__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Billing_City__c</field>
            <operation>equals</operation>
            <value>mumbai</value>
        </filters>
        <filters>
            <field>Industry_Vertical__c</field>
            <operation>equals</operation>
            <value>Media</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer__c.Prospects</value>
        </filters>
        <label>Mumbai Media List</label>
    </listViews>
    <listViews>
        <fullName>Prospects</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile__c</columns>
        <columns>Region__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer__c.Prospects</value>
        </filters>
        <label>Prospects</label>
    </listViews>
    <listViews>
        <fullName>Traction_List</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile__c</columns>
        <columns>Phone__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Industry_Vertical__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rating__c</field>
            <operation>equals</operation>
            <value>Hot</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Customer__c.Prospects</value>
        </filters>
        <label>Traction List</label>
    </listViews>
    <nameField>
        <label>Company</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I90000000q1fOEAQ_00N90000005JUBTEA4</fullName>
        <active>true</active>
        <field>Payment__c.Supplier_Account__c</field>
        <filterItems>
            <field>Customer__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Suppliers</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Payment_Supplier Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000q2FPEAY_00N90000005JUAGEA4</fullName>
        <active>true</active>
        <field>Purchase_Order__c.Supplier_Account__c</field>
        <filterItems>
            <field>Customer__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Suppliers</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Purchase Order_Supplier Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000qIcjEAE_00N90000005JU78EAG</fullName>
        <active>true</active>
        <field>Supplier_Invoice__c.Customer__c</field>
        <filterItems>
            <field>Customer__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>&apos;Suppliers&apos;</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Supplier Invoice_Customer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000001FLcpEAG_00N90000007NmeKEAS</fullName>
        <active>true</active>
        <field>Connection__c.Customer__c</field>
        <filterItems>
            <field>Customer__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Customer,Suppliers</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Connection_Customer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IN00000000Oj8MAE_00NN0000000WNRxMAO</fullName>
        <active>true</active>
        <field>Asset_Management__c.Supplier__c</field>
        <filterItems>
            <field>Customer__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Suppliers</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Asset Management_Supplier</name>
    </namedFilters>
    <pluralLabel>Companies</pluralLabel>
    <recordTypes>
        <fullName>Company</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospects</fullName>
        <active>true</active>
        <description>People possible to become Clients.</description>
        <label>Prospects</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suppliers</fullName>
        <active>true</active>
        <label>Suppliers</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validation_on_Prospects</fullName>
        <active>true</active>
        <description>Prospects needs to fill either Phone , Email  or Mobile</description>
        <errorConditionFormula>AND($RecordType.Name =&apos;Prospects&apos;, AND(   ISBLANK( Email__c ) ,ISBLANK( Mobile__c ), ISBLANK(  Phone__c ) ) )</errorConditionFormula>
        <errorMessage>Prospects needs to fill either of Phone , Email  or Mobile</errorMessage>
    </validationRules>
</CustomObject>